# Template-Expression-Matrix

./: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  CMakeNDEBUG.txt~  Makefile  README  cmake_install.cmake  matspeedtest  mattest  vectest
src/classes/: cwisebinaryop.hpp  cwisebinaryop2.hpp  functor.hpp  matmul.hpp  matmul.hpp~  matplus.hpp  matplus.hpp~  matrix  matrix.hpp  matrix.hpp~  random.hpp  random.hpp~  vector.hpp  vector.hpp~
src/test/: .matspeedtest.cpp.swp  matspeedtest.cpp  matspeedtest.cpp~  mattest.cpp  mattest.cpp~  mattest2.cpp  vectest.cpp  vectest.cpp~
src/trivial/: matrix.hpp  matrix.hpp~
